--- a/server/package.json
+++ b/server/package.json
@@ -19,6 +19,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
+    "faker": "^5.5.3",
     "jsonwebtoken": "^9.0.2",
     "knex": "^3.1.0",
     "multer": "^1.4.5-lts.1",
@@ -36,7 +37,7 @@
     "nodemon": "^3.1.7",
     "supertest": "^7.0.0"
   },
-   "jest": {
+  "jest": {
     "transform": {
       "^.+\\.jsx?$": "babel-jest"
     }
