--- a/client/package.json
+++ b/client/package.json
@@ -22,8 +22,11 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "lucide-react": "^0.453.0",
+    "moment": "^2.30.1",
+    "moment-timezone": "^0.5.46",
     "next-themes": "^0.3.0",
     "react": "^18.3.1",
+    "react-big-calendar": "^1.15.0",
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
     "react-router": "^6.27.0",
