--- a/server/package.json
+++ b/server/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "node index.js",
     "dev": "nodemon index.js",
-    "build": "npm install && npm run start",
+    "build": "npm install",
     "test": "node --experimental-vm-modules node_modules/.bin/jest --detectOpenHandles"
   },
   "keywords": [],
