--- a/client/package.json
+++ b/client/package.json
@@ -24,6 +24,7 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
+    "embla-carousel-react": "^8.3.1",
     "framer-motion": "^11.11.10",
     "lucide-react": "^0.453.0",
     "moment": "^2.30.1",
