--- a/server/vercel.json
+++ b/server/vercel.json
@@ -1,14 +1,17 @@
 {
+  "installCommand": "npm install --legacy-peer-deps",
   "version": 2,
-  "routes": [
+  "builds": [
     {
-      "src": "/api/(.*)",
-      "dest": "index.js"
+      "src": "index.js",
+      "use": "@vercel/node"
     },
     {
-      "src": "/(.*)",
-      "dest": "index.js"
+      "src": "src/**/*",
+      "use": "@vercel/static"
     }
   ],
-  "outputDirectory": "."
+  "routes": [
+    { "src": "/(.*)", "dest": "/" }
+  ]
 }
